# topmassextractor

./: .gitignore  CMakeLists.txt  README.md  notes.txt
extractor/: extractor.cc  extractor.h  extractor_diffxs.cc  extractor_yields.cc
main/: extract.cc  extract.h  extract_diffxs.cc  extract_pseudoexp.cc  extract_yield.cc
root-macros/: compare_masses.C  extract.C  extract.h  log.h
root-macros/extractor/: extractor.cc  extractor.h  extractor_diffxs.cc  extractor_yields.cc
root-macros/main/: extract.cc
root-macros/tools/diffxs_closure_oldkinreco/: combine_closure.C
root-macros/tools/diffxs_closure_oldkinreco_unfolding/: combine_closure.C
root-macros/tools/yield_closure_sumchi2/: combine_closure.C
root-macros/utils/: helpers.cc
scripts/: runAllYield.sh
tools/: .gitignore  calcYieldPDFUncertainty.C  compare_madgraph_samples.C  compare_mc.C  compare_powheg_nominal.C  compare_weights.C  comptool.cc  mass_comparison.C  powheg_vs_data.C
tools/diffxs_closure_correctkinreco/: combine_closure.C
tools/diffxs_closure_oldkinreco/: combine_closure.C
tools/diffxs_closure_oldkinreco_unfolding/: combine_closure.C
tools/svdplot/: plotcorr.C  plotcov.C
tools/yield_closure_fitchi2_fine/: .gitignore  combine_closure.C
utils/: #helpers.h#  helpers.cc  helpers.h  latex.cc  latex.h  plotter.cc  plotter.h
yield_closure/: combine_closure.C
yield_closure_fitchi2/: combine_closure.C
